--- a/package.json
+++ b/package.json
@@ -14,11 +14,15 @@
     "@ffmpeg/core": "^0.8.3",
     "@ffmpeg/ffmpeg": "^0.9.4",
     "@vitejs/plugin-vue": "^5.1.4",
-    "bootstrap": "^5.3.3",
+    "autoprefixer": "^10.4.20",
     "fluent-ffmpeg": "^2.1.3",
     "jspdf": "^2.5.2",
+    "postcss": "^8.4.47",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
+    "react-scripts": "^5.0.1",
+    "tailwindcss": "^3.4.14"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
@@ -30,7 +34,7 @@
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.14",
     "globals": "^15.11.0",
-    "typescript": "~5.6.2",
+    "typescript": "^4.9.5",
     "typescript-eslint": "^8.11.0",
     "vite": "^5.4.10"
   }
