--- a/package.json
+++ b/package.json
@@ -2,8 +2,11 @@
   "name": "vid2flip",
   "private": true,
   "version": "0.0.0",
+  "homepage": "https://xtian18.github.io/vid2flip",
   "type": "module",
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
@@ -33,6 +36,7 @@
     "eslint": "^9.13.0",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.14",
+    "gh-pages": "^6.2.0",
     "globals": "^15.11.0",
     "typescript": "^4.9.5",
     "typescript-eslint": "^8.11.0",
