--- a/package.json
+++ b/package.json
@@ -41,5 +41,8 @@
     "typescript": "^5.6.3",
     "typescript-eslint": "^8.11.0",
     "vite": "^5.4.10"
+  },
+  "overrides": {
+    "typescript": "^5.6.3"
   }
 }
